# global_namecase_engine

./: README.md  build_backend.py  pyproject.toml
global_namecase_engine/: __init__.py  config.py  engine.py  learning.py  tokenizer.py
global_namecase_engine/integrations/: __init__.py  django.py
tests/: test_engine.py  test_learning.py
